Bug 143104 - Typo - Spelling errors and untranslatable strings in Amarok
Summary: Typo - Spelling errors and untranslatable strings in Amarok
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.4.5
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-03-17 13:17 UTC by Biro Arpad
Modified: 2007-03-27 00:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Biro Arpad 2007-03-17 13:17:30 UTC
Version:           1.4.5 (using KDE KDE 3.5.5)
Installed from:    SuSE RPMs
OS:                Linux

Here's a list of typos and other textual problems - you can
check them out in Amarok's POT file. I added my comments in
parentheses.


typo
----

"tracks that contains"        (in 3 strings)

"if you want add"             (in 2 strings)

"negated.This"

"<p>The numeric keywords are: <b>bitrate</b>, <b>disc/discnumber</b> <b>"
"length</b> (expressed in seconds), <b>playcount</b>, <b>rating</b> <b>"
"samplerate</b>, <b>score</b>, <b>size/filesize</b> (expressed in bytes, kbytes, "

  (missing commas)

"Each string may contain one of the following placeholders:"

  (should probably be "one or more")  (in 2 strings)

"your systems has"

"in lyric"       (in 3 strings)

"Clear search text in lyric"     (should probably be rephrased)

"Write to search this word in lyric, from the begin. Press enter to search next
match"

  (should probably be rephrased)

"locations.The playback"

"desktop,laptop"

"will placed"

"downlod"

"wil "

"choosen"

"Dissabled"



should probably not be translatable
-----------------------------------

DeviceEnabled
SubmitPlayedSongs
RetrieveSimilarArtists
DeviceType
MountPoint
MountCommand
UmountCommand
AutoDeletePodcasts
SyncStats
ManuallyAddedServers
ServerPasswords

PlaybackNode
ALSAPlaybackNode



untranslatable
--------------

OSD settings, in tooltip of "Display Text": one of the two "Score:"
  strings cannot be translated, while the other can

"This script does not require any configuration."        (script manager -> Settings)

"Album Artist, The"        ("Help" text in "Organize Collection Files" dialog)
"The Album Artist"
"Artist, The"
"The Artist"
Comment 1 Alexandre Oliveira 2007-03-17 21:23:12 UTC
SVN commit 643565 by aoliveira:

Lots of typos and untranslated strings.
Thanks a lot to Biro Arpad for compiling this list.

BUG: 143104



 M  +1 -1      Options5.ui.h  
 M  +9 -9      amarokcore/amarok.kcfg  
 M  +3 -3      app.cpp  
 M  +5 -5      contextbrowser.cpp  
 M  +8 -8      editfilterdialog.cpp  
 M  +1 -1      engine/helix/config/helixconfig.kcfg  
 M  +1 -1      engine/helix/helix-errors.cpp  
 M  +4 -4      engine/nmm/nmm_configdialogbase.ui  
 M  +1 -1      magnatunebrowser/magnatunedownloaddialogbase.ui  
 M  +1 -1      magnatunebrowser/magnatunepurchasedialogbase.ui  
 M  +2 -2      mediadevice/mtp/mtpmediadevice.cpp  
 M  +4 -4      organizecollectiondialog.ui.h  
Comment 2 Alexandre Oliveira 2007-03-17 22:26:08 UTC
"This script does not require any configuration." comes directly from the scripts, and we won't fix it for 1.4, unfortunately.
Comment 3 Alexandre Oliveira 2007-03-17 23:12:28 UTC
SVN commit 643598 by aoliveira:

Forward port i18n fixes
CCBUG: 143104


 M  +1 -1      Options5.ui.h  
 M  +9 -9      amarokcore/amarok.kcfg  
 M  +26 -0     collection/sqlmeta.cpp  
 M  +21 -6     collection/sqlmeta.h  
 M  +4 -4      contextbrowser.cpp  
 M  +8 -8      editfilterdialog.cpp  
 M  +1 -1      engine/helix/helix-errors.cpp  
 M  +1 -1      engine/helix/helixconfig.kcfg  
 M  +4 -4      engine/nmm/nmm_configdialogbase.ui  
 M  +1 -1      mediadevice/mtp/mtpmediadevice.cpp  
 M  +5 -4      organizecollectiondialog.ui.h  
 M  +1 -1      servicebrowser/magnatunestore/magnatunedownloaddialogbase.ui  
 M  +1 -1      servicebrowser/magnatunestore/magnatunepurchasedialogbase.ui  
 M  +2 -2      tagguesserconfigdialog.ui  
Comment 4 Biro Arpad 2007-03-24 20:49:32 UTC
Thanks for the corrections. It seems "UmountCommand" was omitted - it's still in the PO file. There's one more incorrect string: "Search text in lyric" (sorry for reporting it here, I didn't want to open a new bugreport for it).
Comment 5 Alexandre Oliveira 2007-03-24 21:00:58 UTC
Reopening, otherwise I'll forget this
Comment 6 Mark Kretschmann 2007-03-26 11:30:05 UTC
SVN commit 646328 by markey:

Fix typo in string.

BUG: 143104


 M  +1 -1      contextbrowser.cpp  


--- branches/stable/extragear/multimedia/amarok/src/contextbrowser.cpp #646327:646328
@@ -258,7 +258,7 @@
        connect ( m_lyricsSearchText, SIGNAL(textChanged(const QString &)), this, SLOT(lyricsSearchText(const QString & )) );
        connect ( m_lyricsSearchText, SIGNAL(returnPressed()), this, (SLOT(lyricsSearchTextNext())) );
        Amarok::actionCollection()->setAutoConnectShortcuts ( true );
-       new KAction( i18n("Search text in lyric"), KShortcut("/"), this,SLOT( lyricsSearchTextShow() ), Amarok::actionCollection(), "search_text_lyric");
+       new KAction( i18n("Search text in lyrics"), KShortcut("/"), this,SLOT( lyricsSearchTextShow() ), Amarok::actionCollection(), "search_text_lyric");
        Amarok::actionCollection()->setAutoConnectShortcuts ( false );
     }
 
Comment 7 Biro Arpad 2007-03-26 20:35:22 UTC
Thanks, but it seems that the "UmountCommand" label text is still
present in the src/amarokcore/amarok.kcfg file (the other similar
ones have been corrected).
Comment 8 Mark Kretschmann 2007-03-26 20:48:04 UTC
But this isn't a user visible string, as far as I can tell. Where does it appear?
Comment 9 Biro Arpad 2007-03-26 20:57:06 UTC
I haven't seen it on the UI -- I only encountered those
strings (DeviceEnabled, SubmitPlayedSongs, ...) while
translating the software.
Comment 10 Mark Kretschmann 2007-03-27 00:45:49 UTC
Well, it's really just an internal label. This is the entry from amarok.kcfg:

<entry key="UmountCommand" type="String">
  <label>UmountCommand</label>
  <whatsthis>The umount command used for the media device connection.</whatsthis>
</entry>

So I don't get why it's translated. I'd say let's ignore it.