Lots of typos and untranslated strings. Thanks a lot to Biro Arpad for compiling this list.

BUG: 143104


svn path=/branches/stable/extragear/multimedia/amarok/; revision=643565