src/editfilterdialog.cpp
@@ -84,8 +84,8 @@ EditFilterDialog::EditFilterDialog( QWidget* parent, bool metaBundleKeywords, co
            " (you can specify mp3, ogg, flac, ... and the file extensions will be matched), "
            "<b>genre</b>, <b>comment</b>, <b>composer</b>, <b>directory</b>, <b>lyrics</b>, "
            "<b>title</b>, and <b>label</b>.</p>"
-           "<p>The numeric keywords are: <b>bitrate</b>, <b>disc/discnumber</b> "
-           "<b>length</b> (expressed in seconds), <b>playcount</b>, <b>rating</b> "
+           "<p>The numeric keywords are: <b>bitrate</b>, <b>disc/discnumber</b>, "
+           "<b>length</b> (expressed in seconds), <b>playcount</b>, <b>rating</b>, "
            "<b>samplerate</b>, <b>score</b>, <b>size/filesize</b> (expressed in bytes, "
            "kbytes, and megabytes as specified in the unit for the filesize keyword), "
            "<b>track</b> (i.e. the track number), and <b>year</b>.</p>") );
@@ -255,19 +255,19 @@ EditFilterDialog::EditFilterDialog( QWidget* parent, bool metaBundleKeywords, co
 
     m_checkALL = new QRadioButton( i18n("Match all words"), m_groupBox2, "checkall" );
     QToolTip::add( m_checkALL,
-      i18n("<p>Check this box to look for the tracks that contains all the words you typed "
+      i18n("<p>Check this box to look for the tracks that contain all the words you typed "
            "in the related Simple Search edit box</p>"));
     ratioLay->addWidget( m_checkALL );
 
     m_checkAtLeastOne = new QRadioButton( i18n("Match any word"), m_groupBox2, "checkor");
     QToolTip::add( m_checkAtLeastOne,
-      i18n("<p>Check this box to look for the tracks that contains at least one of the words "
+      i18n("<p>Check this box to look for the tracks that contain at least one of the words "
            "you typed in the related Simple Search edit box</p>"));
     ratioLay->addWidget( m_checkAtLeastOne );
 
     m_checkExactly = new QRadioButton( i18n("Exact match"), m_groupBox2, "checkexactly");
     QToolTip::add( m_checkExactly,
-      i18n("<p>Check this box to look for all the tracks that contains exactly the words you typed "
+      i18n("<p>Check this box to look for all the tracks that contain exactly the words you typed "
            "in the related Simple Search edit box</p>"));
     ratioLay->addWidget( m_checkExactly );
 
@@ -303,13 +303,13 @@ EditFilterDialog::EditFilterDialog( QWidget* parent, bool metaBundleKeywords, co
 
     m_checkAND = new QRadioButton( i18n("AND logic condition", "AND"), m_groupBox3, "checkAND" );
     QToolTip::add( m_checkAND,
-      i18n("<p>Check this box if you want add another condition and you want that the filter "
+      i18n("<p>Check this box if you want to add another condition and you want that the filter "
            "to match both the previous conditions and this new one</p>"));
     ratioLay2->addWidget( m_checkAND );
 
     m_checkOR = new QRadioButton( i18n("OR logic condition", "OR"), m_groupBox3, "checkOR" );
     QToolTip::add( m_checkOR,
-      i18n("<p>Check this box if you want add another condition and you want that the filter "
+      i18n("<p>Check this box if you want to add another condition and you want that the filter "
            "to match either the previous conditions or this new one</p>"));
     ratioLay2->addWidget( m_checkOR );
 
@@ -319,7 +319,7 @@ EditFilterDialog::EditFilterDialog( QWidget* parent, bool metaBundleKeywords, co
     QToolTip::add( m_prefixNOT,
       i18n("Check this box to negate the defined filter condition"));
     QWhatsThis::add( m_prefixNOT,
-      i18n("<p>If this option is checked the defined filter condition will be negated."
+      i18n("<p>If this option is checked the defined filter condition will be negated. "
            "This means that, for example, you can define a filter that looks for all "
            "tracks that are not of a specific album, artist, and so on.</p>"));
     verticalCondLay->addWidget( m_prefixNOT );
